Rewrite deprecated code